# truce

./: .gitignore  AGENTS.md  API_SETUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FOLLOWUPS.md  HOW_TO_VERIFY.md  LICENSE  Makefile  QUICK_START.md  README.md  docker-compose.yml  env.example  package-lock.json  package.json  plan.md  run-local.sh  turbo.json
.changeset/: m3-panel-aggregation.md
.codex/: config.toml  context.md  guardrails.md  roadmap.yaml
.codex/feature_specs/: m1_core_search_cache.md  m2_mcp_agentic_gathering.md  m3_panel-aggregation.md  m4_replay_bundle.md  m5_bias_counterecho.md
.codex/prompts/: agent_roles.md  tool_contracts.md  ui_copy_snippets.md
.codex/tasks/: _shared.yaml  milestone_1_core.yaml  milestone_2_agentic.yaml  milestone_4_replay.yaml  milestone_5_bias_counterecho.yaml
.github/workflows/: ci.yml  codeql.yml
apps/adjudicator/: .flake8  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/adjudicator/tests/: test_agentic_research.py  test_api_endpoints.py  test_claim_flow.py  test_explorer_agent.py  test_models_validation.py  test_panel_aggregation.py  test_verification_cache.py
apps/adjudicator/truce_adjudicator/: __init__.py  main.py  models.py  search_index.py  verification.py
apps/adjudicator/truce_adjudicator/consensus/: __init__.py  cluster.py  vote.py
apps/adjudicator/truce_adjudicator/mcp/: __init__.py  brave_search_server.py  explorer.py  web_search.py
apps/adjudicator/truce_adjudicator/panel/: __init__.py  agentic_research.py  run_panel.py
apps/adjudicator/truce_adjudicator/rdf/: __init__.py  context.jsonld  vocab.ttl
apps/adjudicator/truce_adjudicator/replay/: __init__.py  bundle.py
apps/adjudicator/truce_adjudicator/scripts/: __init__.py  seed.py  start_brave_server.py
apps/adjudicator/truce_adjudicator/statcan/: __init__.py  fetch_csi.py  test_wds.py  utils.py
apps/web/: Dockerfile  jest.config.js  next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/web/app/: globals.css  (+2 more)
docs/: ADR-0001-MVP-Scope.md  API.md  DATA-SOURCES.md  NVC-GUIDE.md  agentic_research_implementation.md
(+23 files in other folders)
