[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truce-adjudicator"
version = "0.1.0"
description = "Truce adjudication service for claims, evidence, and consensus"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Truce Team" }
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "pandas>=2.1.0",
    "rdflib>=7.0.0",
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "aiofiles>=23.0.0",
    "cryptography>=41.0.0",
    "jsonschema>=4.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.26.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "7.4"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=truce_adjudicator",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "api: API tests", 
    "slow: Slow tests that may take time",
]
filterwarnings = [
    "ignore::DeprecationWarning:datetime.*",
    "ignore::DeprecationWarning:pydantic.*",
]
asyncio_mode = "auto"
